--- a/src/main/webapp/WEB-INF/views/admin/technology.html
+++ b/src/main/webapp/WEB-INF/views/admin/technology.html
@@ -47,6 +47,16 @@
 
 <body>
 <div layout:fragment="content">
+    <div th:if="${successMessage}" class="alert alert-success alert-dismissible fade show" role="alert">
+        <span th:text="${successMessage}"></span>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+
+    <!-- Thông báo lỗi -->
+    <div th:if="${errorMessage}" class="alert alert-danger alert-dismissible fade show" role="alert">
+        <span th:text="${errorMessage}"></span>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
     <div class="technology-container">
         <div class="technology-header">
             <img th:src="@{/images/technology.svg}" alt="Technology" width="20" height="20">
