--- a/src/main/webapp/WEB-INF/views/layouts/admin-layout.html
+++ b/src/main/webapp/WEB-INF/views/layouts/admin-layout.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <script th:src="@{/js/bootstrap.min.js}"></script>
     <link rel="stylesheet" th:href="@{/css/style.css}" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
     <style>
         html, body {
@@ -72,6 +73,23 @@
         }
     }, 1500);
 
+
+    document.addEventListener("DOMContentLoaded", function () {
+        const successAlert = document.getElementById("successAlert");
+        const errorAlert = document.getElementById("errorAlert");
+
+        // Ẩn alert sau 1 giây (1000ms)
+        setTimeout(function () {
+            if (successAlert) {
+                successAlert.classList.remove("show");
+                successAlert.classList.add("fade");
+            }
+            if (errorAlert) {
+                errorAlert.classList.remove("show");
+                errorAlert.classList.add("fade");
+            }
+        }, 1000);
+    });
     const searchInput = document.getElementById('searchInput');
     const form = document.getElementById('filterForm');
     if (searchInput) {
@@ -239,15 +257,34 @@
     function openCV(el) {
         const appId = el.getAttribute("data-app-id");
         const input = document.getElementById("appId");
+        if (input) input.value = appId;
 
-        if (input) {
-            input.value = appId;
-        }
+        const modalElement = document.getElementById("cvModal");
+        const modalBody = document.getElementById("cvContent");
 
-        const modalElement = document.getElementById('cvModal');
-        const bsModal = new bootstrap.Modal(modalElement);
-        bsModal.show();
+        modalBody.innerHTML = "<p class='text-center text-muted'>Đang tải CV...</p>";
+
+        fetch(`/admin/application/candidate/view-cv/${appId}`)
+            .then(res => {
+                if (!res.ok) {
+                    throw new Error("Lỗi khi tải CV");
+                }
+                return res.text();
+            })
+            .then(html => {
+                modalBody.innerHTML = html;
+
+                const bsModal = new bootstrap.Modal(modalElement);
+                bsModal.show();
+
+            })
+            .catch(() => {
+                modalBody.innerHTML = "<p class='text-danger text-center'>Không thể tải nội dung CV.</p>";
+                const bsModal = new bootstrap.Modal(modalElement);
+                bsModal.show();
+            });
     }
+
     function openInterview(el) {
         const appId = el.getAttribute("data-app-id");
         const interviewLink = el.getAttribute("data-interview-link") || 'Chua co';
